# cmaker

./: DOCS.md  README.md  add.py  build.py  cmkr  help.py  new.py  scripts.py
man/: help.txt
src/: __init__.py  add.py  build.py  clean.py  help.py  init.py  message.py  new.py  run.py  scripts.py  util.py
src/cmaker_config/: config.py
templates/: CMakeLists.txt  main.cpp  src_CMakeLists.txt
templates/.cmaker/: FindSDL2_image.docs  class.c.header  class.c.source  class.cxx.header  class.cxx.source  unbox.txt
templates/.cmakerignore/: FindSDL2.docs  class.cpp  class.hpp
templates/default/: CMakeLists.txt  package.json  scripts.cmaker
templates/default/src/: CMakeLists.txt  main.cpp
templates/node-addon/: .clang-format  .gitignore  CMakeLists.txt  cmaker-config.json  package.json
templates/node-addon/src/: CMakeLists.txt  lib.cc
templates/opengl/: .clang-format  .clang-tidy  CMakeLists.txt  cmaker-config.json  package.json  scripts.py
templates/opengl/src/: CMakeLists.txt  main.cpp
templates/qt6/: .gitignore  CMakeLists.txt  cmaker-config.json
templates/qt6/src/: CMakeLists.txt  main.cpp  widget.cpp  widget.hpp  widget.ui
templates/src/: CMakeLists.txt  main.cpp
test/: .clang-format  CMakeLists.txt  cmaker-config.json
test/test_cmkr/: CMakeLists.txt  test.hpp
